<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="whats_new_in">What\'s new %1$s in</string>
    <string name="whats_new">What\'s new?</string>

    <string name="feature1">App cache</string>
    <string name="feature1desc">Data, such as posts and sources stays in cache when using app, which improves battery life and performance.</string>

    <string name="feature2">Colored background to images</string>
    <string name="feature2desc">When viewing an image within an article, it now features a colored background based on the image.</string>

    <string name="feature3">Crash fixes</string>
    <string name="feature3desc">A few issues leading to the app to crash were fixed.</string>
</resources>