<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/onboarding_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/whats_new"
            android:textColor="@color/textPrimary"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            app:fontFamily="@font/inter_black" />



        <LinearLayout
            android:id="@+id/onboarding_version_change_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:background="@drawable/featureicon1"
                android:backgroundTint="?attr/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/feature1"
                    android:textColor="@color/textPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/feature1desc"
                    android:textColor="@color/textSecondary" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/onboarding_version_change_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:background="@drawable/featureicon2"
                android:backgroundTint="?attr/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/feature2"
                    android:textColor="@color/textPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/feature2desc"
                    android:textColor="@color/textSecondary" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/onboarding_version_change_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:background="@drawable/featureicon3"
                android:backgroundTint="?attr/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/feature3"
                    android:textColor="@color/textPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/feature3desc"
                    android:textColor="@color/textSecondary" />
            </LinearLayout>


        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/onboarding_version_do_not_show"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/donot_show_again"
            android:gravity="center"
            app:fontFamily="@font/inter"/>

        <com.niilopoutanen.rss_feed.common.PrimaryButton
            android:id="@+id/onboarding_version_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/continua"/>

    </LinearLayout>


</ScrollView>